--- a/aboutUS.html
+++ b/aboutUS.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-   <link rel="stylesheet" href="style.css">
+    <title>About US</title>
 </head>
 <body>
-    <h1>GIT</h1>
-    <p>Moj paragraf</p>
-    
+    <h1>About us page</h1>
+    <p>Moj drugi paragraf</p>
+    <div>
+        Dodat div
+    </div>
 </body>
 </html>
